kubernetes-training-consumer/kubernetes/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kubernetes-training-consumer-destination
spec:
  host: kubernetes-training-consumer
  subsets:
    - name: regular
      labels:
        app: kubernetes-training-consumer
